[package]
name = "bjc-downloader"
version = "0.1.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["derive"] }
colog = "1.3.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking"] }
thiserror = "1.0.63"
url = "2.5.2"
